# SillyRenderer

./: Cargo.toml  README.md
shaders/: basic.frag  basic.vert
src/: consts.rs  main.rs  primitives.rs
src/primitives/: camera.rs  model.rs  normal.rs  shader.rs  texture.rs  vertex.rs
src/util/: file.rs
