[package]
name = "rgl"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra-glm = "0.16.0"
image = "0.24.1"

[dependencies.glium]
version = "0.29.1"
features = ["glutin"]

[dependencies.obj-rs]
version = "0.7.0"
features = ["glium"]

# SERDE
[dependencies.serde]
version = "1.0.136"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.79"


